# MatrixLib

./: .gitignore  CMakeLists.txt
matrix_lib/: CMakeLists.txt  MatrixLibInclude.h  MatrixLibSerialization.h
matrix_lib/matrix_structures/: Mat2.h  Mat3.h  Mat4.h  MatrixOperations.h  MatrixStructuresInclude.h  Vec2.h  Vec3.h  Vec4.h  VecArrays.h  VecX.h
matrix_lib/pose_structures/: AffineIncrement.h  AffinePose.h  DualQuaternion.h  Pose.h  PoseAliases.h  PoseArrays.h  PoseCommon.h  PoseIncrement.h  PoseOperations.h  PoseProcessing.h  PoseStructuresInclude.h  PoseType.h  RigidPose.h  SO3.h  SO3wT.h  UnitQuaternion.h
matrix_lib/utils/: Constants.h  LibIncludeCPU.h  Math.h  Serialization.h  SoAConversions.h  SoloIncludeCPU.h  SoloSupport.h  VectorMath.h
tests/integration_tests/: CMakeLists.txt  IncludeCPU.cpp
tests/unit_tests/: CMakeLists.txt  main.cpp
tests/unit_tests/matrix_structures/: MatrixOperationsTest.cpp  VecArraysTest.cpp  VecStructuresTest.cpp
tests/unit_tests/pose_structures/: AffinePoseIncrementTest.cpp  AffinePoseTest.cpp  DualQuaternionTest.cpp  PoseArraysTest.cpp  PoseOperationsShared.h  PoseOperationsTest.cpp  PoseStructuresTest.cpp  RigidPoseTest.cpp  SO3Test.cpp  SO3wTTest.cpp  UnitQuaternionTest.cpp
tests/unit_tests/utils/: Common.h  SerializationTest.cpp
